@@ -296,6 +296,12 @@ Soportar uft-8 en el footer, que sirva para texto footer normal pero tambien con
 Quitar el parche para soportar la eñe en dicha opcion
 Cuidado que  en la consola si hay verbose debug, se muestra caracter extraño para la ñ
 
+-Linux: al hacer alt-tab para ir a otra ventana, al volver con raton por ejemplo, el alt "sigue pulsado" en ZEsarUX
+Posible solucion: https://stackoverflow.com/questions/39087079/detect-modifier-key-release-in-x11-root-window. Creo que lo mejor, como se comenta en una posible solución ahí, seria: cuando se ha pulsado alt, leer cada x segundos, si la tecla alt está pulsada o no, aunque no acabo de entender
+que si se conmuta a otra ventana, la tecla alt ni se leerá...
+Mascaras eventos: ninguna parece capturar cambio ventana: https://tronche.com/gui/x/xlib/events/processing-overview.html#FocusChangeMask
+Con SDL por ejemplo también sucede
+
 ---Fin Mejoras---
 
 
